# ProgrammingMCMS

./: pth_testrun  pth_testrun_histo  pth_testrun_pipeline
heat-1.17/: Makefile  Makefile.am  Makefile.in  areas_100x150.pgm  config.status  configure  configure.ac  gradient_100x150.pgm  pat2_100x150.pgm  plasma_100x150.pgm
heat-1.17/Data/: areas_100x150.pgm  gradient_100x150.pgm  pat1_100x150.pgm  pat2_100x150.pgm  pat3_100x150.pgm  plasma_1000x100.pgm  plasma_100x100.pgm  plasma_100x1000.pgm  plasma_100x150.pgm  plasma_100x200.pgm  plasma_100x2000.pgm  plasma_100x50.pgm  plasma_2000x100.pgm  plasma_200x100.pgm  plasma_50x100.pgm
heat-1.17/autom4te.cache/: output.0  requests  traces.0
heat-1.17/omp/: Makefile  Makefile.am  compute.c  config.status  heat  merge.c  msort  vecsort.c
heat-1.17/omp/.deps/: compute.Po  main.Po  merge.Po
heat-1.17/pth/: Makefile  Makefile.am  barrier  compute.c  config.h  config.status  configure  heat  histo.c  pipeline.c
heat-1.17/pth/.deps/: barrier.Po  compute.Po  fail.Po  input.Po  main.Po  output.Po
heat-1.17/pth/autom4te.cache/: output.0  requests  traces.0
heat-1.17/seq/: Makefile  compute.c  config.status  heat  heat_pics  imgdemo  inputdemo  outputdemo
heat-1.17/seq/.deps/: compute.Po  fail.Po  heat_pics-compute.Po  heat_pics-main.Po  img.Po  input.Po  main.Po  main_imgdemo.Po  main_inputdemo.Po  main_outputdemo.Po  output.Po
heat-1.17/seq/autom4te.cache/: output.0  requests  traces.0
heat-1.17/src/: compute.h  input.c  input.h  main.c
